--- a/views/eyescan/index.jade
+++ b/views/eyescan/index.jade
@@ -18,6 +18,8 @@ block contentEyescan
                 div.input-group-append
                   button.btn.btn-outline-primary(type='submit')
                     i.fa.fa-search
+          div.card-block.text-center.align-middle-center.align-center.mb-2
+            p.h3 NO KEYWORD
            
     // right-box
     div.col-md-9.col-sm-7.h-100
@@ -26,60 +28,14 @@ block contentEyescan
           p.card-title.font-weight-bold
             |LIST IMAGE
         div.card-body.h-auto
-          
-          // Loop object key to button 
-          if objectKey.length
-            div.card-block.align-middle-center.align-middle.mb-2.filter-button-group
-              button.btn.btn-outline-secondary.mr-1.button-type(data-filter="*")  Show All
-            
-              each val,index in objectKey
-                button.btn.btn-outline-secondary.mr-1.button-type(data-filter=".#{val}") #{val}
-          
-          // show all
+          div.card-block.justify-content-center.align-middle.align-middle-center.text-center
+            p.h3 NO ACTION
+      
           
       
       
-        div.card-block
-          div.grid.align-middle-center.align-center
-            each objItem,key in listIMG 
-              each item in objItem  
-                div.grid-item(class='#{key}')
-                  a(href='/eyescan/detail/1')
-                    img.img-thumbnail.img-item-grid(src='#{item.url}')
-            
-                
-          //- // if anterior
-          //- if anterior.length
-          //-   div.card.mb-2
-          //-     div.card-header
-          //-       p.card-title.font-weight-bold.h5 Anterior
-          //-     div.card-body
-          //-       div.grid.align-middle-center.align-center
-          //-         each val,index in anterior
-          //-            div.grid-item
-          //-              img.img-thumbnail.img-item-grid(src='#{val.url}')
-          //- 
-          //- // if positerior
-          //- if posterior.length
-          //-   div.card.mb-2
-          //-     div.card-header
-          //-       p.card-title.font-weight-bold.h5 Posterior
-          //-     div.card-body
-          //-       div.grid.align-middle-center.align-center
-          //-         each val,index in posterior
-          //-            div.grid-item
-          //-              img.img-thumbnail.img-item-grid(src='#{val.url}')
-          //- 
-          //- // if other
-          //- if other.length
-          //-  div.card.mb-2
-          //-    div.card-header
-          //-      p.card-title.font-weight-bold.h5 Other
-          //-    div.card-body
-          //-      div.grid.align-middle-center.align-center
-          //-        each val,index in other
-          //-           div.grid-item
-          //-             img.img-thumbnail.img-item-grid(src='#{val.url}')
+      
+      
               
     
         
